--- a/index.html
+++ b/index.html
@@ -500,3 +500,27 @@ eventbrite:
     </div>
   </div>
 </div> <!-- End of 'R' section. -->
+
+<!--
+  Thanks section
+-->
+<h2 id="thanks">Agradecimentos</h2>
+
+<div id="thaks-table">
+  <div class="row">
+    <div class="col-md-3">
+      <h4>Organização</h4>
+    </div>
+    <!--
+    <div class="col-md-3">
+      <h4>Developed With</h4>
+    </div>
+    <div class="col-md-3">
+      <h4>Organized By</h4>
+    </div>
+    <div class="col-md-3">
+      <h4>Financial Support </h4>
+      <img src="http://www.monsanto.com/Style%20Library/Images/logo.png" alt="Monsanto" class="img-responsive">
+    </div>
+    -->
+</div>
