Trocado Python por R na grade

--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@ eventbrite:
     <table class="table table-striped">
       <tr> <td>09:00</td> <td>Automatização de tarefas com o terminal Unix</td> </tr>
       <tr> <td>12:00</td> <td>Intervalo para almoço</td> </tr>
-      <tr> <td>13:00</td> <td>Construindo programas com Python</td> </tr>
+      <tr> <td>13:00</td> <td>Construindo programas com R</td> </tr>
       <tr> <td>16:00</td> <td>Revisão</td> </tr>
     </table>
   </div>
@@ -156,7 +156,7 @@ eventbrite:
     <table class="table table-striped">
       <tr> <td>09:00</td> <td>Controle de Versão com Git</td> </tr>
       <tr> <td>12:00</td> <td>Intervalo para almoço</td> </tr>
-      <tr> <td>13:00</td> <td>Mais exemplos de programas em Python</td> </tr>
+      <tr> <td>13:00</td> <td>Mais exemplos de programas em R</td> </tr>
       <tr> <td>16:00</td> <td>Revisão</td> </tr>
     </table>
   </div>
