--- a/index.html
+++ b/index.html
@@ -121,8 +121,8 @@ eventbrite:
 -->
 <p>
   <strong>Contato</strong>:
-  Por favor, envie um email para
-  {% if page.contact %}
+  Por favor, envie um email para <a href='mailto:{{flavio86@ufpi.edu.br}}'>{{Flavio}}</a> ou <a href='mailto:{{romuere@ufpi.edu.br}}'>{{Romuere}}</a>
+  ou {% if page.contact %}
     <a href='mailto:{{page.contact}}'>{{page.contact}}</a>
   {% else %}
     <a href='mailto:{{site.contact}}'>{{site.contact}}</a>
