update subject when email, organization

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: workshop
 root: .
 venue: Universidade Federal do Ceará
-address: FIXME
+address: LabVis
 country: Brazil
 language: pt
 latlng: (fractional latitude and longitude like 41.7901128,-87.6007318)
@@ -121,7 +121,8 @@ eventbrite:
 -->
 <p>
   <strong>Contato</strong>:
-  Por favor, envie um email para <a href='mailto:{{flavio86@ufpi.edu.br}}'>{{Flavio}}</a> ou <a href='mailto:{{romuere@ufpi.edu.br}}'>{{Romuere}}</a>
+  Por favor, envie um email para <a href='mailto:flavio86@ufpi.edu.br?Subject=Software Carpentry na UFC'>Flavio</a> 
+  ou <a href="mailto:romuere@ufpi.edu.br?Subject=Software Carpentry na UFC">Romuere</a>
   ou {% if page.contact %}
     <a href='mailto:{{page.contact}}'>{{page.contact}}</a>
   {% else %}
@@ -510,6 +511,8 @@ eventbrite:
   <div class="row">
     <div class="col-md-3">
       <h4>Organização</h4>
+      Ranieri Silva, Dani Ushizima, Fátima Medeiros, Flavio e Romuere
+      <h4>Supporte financeiro</h4>
     </div>
     <!--
     <div class="col-md-3">
