--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@ venue: Universidade Federal do Ceará
 address: LabVis
 country: Brazil
 language: pt
-latlng: (fractional latitude and longitude like 41.7901128,-87.6007318)
+latlng: -3.4301,-38.3235
 humandate: Jun 19-20, 2015
 humantime: 9:00 am - 5:00 pm
 startdate: 2015-06-19
 enddate: 2015-06-20
 instructor: ["Daniela Ushizima", "Raniere Silva"]
-helper:
+helper: []
 contact: dani.lbnl@gmail.com
 etherpad:
 eventbrite:
