--- a/index.html
+++ b/index.html
@@ -510,9 +510,18 @@ eventbrite:
 <div id="thaks-table">
   <div class="row">
     <div class="col-md-3">
-      <h4>Organização</h4>
-      Ranieri Silva, Dani Ushizima, Fátima Medeiros, Flavio e Romuere
-      <h4>Supporte financeiro</h4>
+      <h4>Indivíduos</h4>
+      <ul>
+        <li>Raniere Silva</li>
+        <li>Dani Ushizima</li>
+        <li>Fátima Medeiros</li>
+        <li>Flavio</li>
+        <li>Romuere</li>
+      </ul>
+    </div>
+    <div class="col-md-3">
+      <h4>Apoio Financeiro</h4>
+      <img src="img/logo_gpi_p_novo.png" alt="LABVIS - Laboratório de Visão, Imagens e Sinais"/>
     </div>
     <!--
     <div class="col-md-3">
