--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ instructor: ["Daniela Ushizima", "Raniere Silva"]
 helper: []
 contact: dani.lbnl@gmail.com
 etherpad:
-eventbrite:
+eventbrite: 16989573271
 ---
 <!--
   HEADER
