Corrigido logo do labvis

--- a/index.html
+++ b/index.html
@@ -521,7 +521,7 @@ eventbrite: 16989573271
     </div>
     <div class="col-md-3">
       <h4>Apoio Financeiro</h4>
-      <img src="img/logo_gpi_p_novo.png" alt="LABVIS - Laboratório de Visão, Imagens e Sinais"/>
+      <img src="img/logo_gpi_big.gif" alt="LABVIS - Laboratório de Visão, Imagens e Sinais"/>
     </div>
     <!--
     <div class="col-md-3">
