Revert "Adicionado Eventbrite"
This reverts commit 2b71734f1244c1e414f9927e655659dc37bd7cc6.

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ instructor: ["Daniela Ushizima", "Raniere Silva"]
 helper: []
 contact: dani.lbnl@gmail.com
 etherpad:
-eventbrite: 16989573271
+eventbrite:
 ---
 <!--
   HEADER
