Adicionado pré-inscrição

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ eventbrite: 16989573271
   src="https://www.eventbrite.com/tickets-external?eid={{page.eventbrite}}&ref=etckt"
   frameborder="0"
   width="100%"
-  height="206px"
+  height="274px"
   scrolling="auto">
 </iframe>
 {% endif %}
@@ -105,12 +105,16 @@ eventbrite: 16989573271
 -->
 <p>
   <strong>Requerimentos:</strong>
-  Participantes devem trazer seu próprio notebook
-  com os programas listados <a href="#setup">abaixo</a> já instalados.
-  Participantes também precisam aceitar
-  o <a href="{{site.swc_site}}/conduct.html">Código de Conduta</a>.
-  da Software Carpentry.
 </p>
+
+<ol>
+  <li>Aceitar o <a href="{{site.swc_site}}/conduct.html">Código de Conduta</a> da Software Carpentry.</li>
+  <li>Realizar a pré-inscrição.</li>
+  <li>Enviar currículo e carta de apresentação para <a href='mailto:flavio86@ufpi.edu.br?Subject=Software Carpentry na UFC - CV'>flavio86@ufpi.edu.br</a>.</li>
+  <li>Realizar inscrição (seguindo informações enviadas por email).</li>
+  <li>Trazer seu próprio notebook
+    com os programas listados <a href="#setup">abaixo</a> já instalados.</li>
+</ol>
 
 <!--
   CONTACT EMAIL ADDRESS
@@ -143,7 +147,7 @@ eventbrite: 16989573271
 <h2>Programação</h2>
 
 <div class="row-fluid">
-  <div class="span6">
+  <div class="col-md-6">
     <h3>Dia 1</h3>
     <table class="table table-striped">
       <tr> <td>09:00</td> <td>Automatização de tarefas com o terminal Unix</td> </tr>
@@ -152,7 +156,7 @@ eventbrite: 16989573271
       <tr> <td>16:00</td> <td>Revisão</td> </tr>
     </table>
   </div>
-  <div class="span6">
+  <div class="col-md-6">
     <h3>Dia 2</h3>
     <table class="table table-striped">
       <tr> <td>09:00</td> <td>Controle de Versão com Git</td> </tr>
