Corrigido nome do Alexandre

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ humantime: 9:00 am - 5:00 pm
 startdate: 2015-06-19
 enddate: 2015-06-20
 instructor: ["Daniela Ushizima", "Raniere Silva"]
-helper: ["Alexandre ASM"]
+helper: ["Alexandre \"asm\""]
 contact: dani.lbnl@gmail.com
 etherpad:
 eventbrite: 16989573271
