Small fix to instructions

--- a/index.html
+++ b/index.html
@@ -301,10 +301,6 @@ eventbrite: 16989573271
   você vai precisar dos seguintes programas instalados.
   Além dos softwares listados,
   você precisa de um navegador web atual.
-  Depois de instalar os software indicados,
-  visite <a href="setup/index.html">essa página</a>,
-  que possui instruções de como testar
-  se os programas foram instalados corretamente.
 </p>
 
 <div id="editor"> <!-- Start of 'editor' section. -->
@@ -379,7 +375,7 @@ eventbrite: 16989573271
       <p>Depois de instalar Git Bash:</p>
       <ul>
         <li>
-          Baixe <a href="{{site.windows_installer_path}}">Software Carpentry Windows Installer</a>.
+          Baixe <a href="{{site.swc_installer}}">Software Carpentry Windows Installer</a>.
         </li>
         <li>
           Click duas vezes no arquivo para executá-lo.
